# chorus

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  artifact_metadata.txt  config.json  parameters.py  params_poisson.py  parse_nivss_bench.py  parse_output.py  parse_secret_recovery_bench.py
benches/: pv_nivss.rs  sa_nivss.rs  secret_recovery.rs  serialization.rs
class_group/: Cargo.toml  build.rs
class_group/benches/: bench.rs
class_group/c++/: CMakeLists.txt
class_group/c++/src/: CMakeLists.txt  bicycl.hpp  interface.cpp  interface.h
class_group/c++/src/bicycl/: CL_HSMqk.hpp  CL_HSMqk.inl  gmp_extras.inl  qfi.hpp  qfi.inl  seclevel.inl
class_group/src/: cl_hsm.rs  cpp_interface.rs  lib.rs
experiments/: generate_appendixA41.py  generate_figure5.py  generate_figure8.py  generate_server_cost.py  generate_table10.py  generate_table6.py  generate_table7.py  generate_table9.py  parse_nivss.py  parse_secret_recovery.py  plot_nivss.py
gmp-mpfr-sys/: Cargo.toml  README.md  RELEASES.md  build.rs
gmp-mpfr-sys/doc-c/GMP/: Algorithms.html  C_002b_002b-Class-Interface.html  Concept-Index.html  Contributors.html  Copying.html  Floating_002dpoint-Functions.html  Formatted-Output.html  Function-Index.html  GMP-Basics.html  Installing-GMP.html  Integer-Functions.html  Internals.html  Introduction-to-GMP.html  Low_002dlevel-Functions.html  Random-Number-Functions.html  Rational-Number-Functions.html  Reporting-Bugs.html  index.html
gmp-mpfr-sys/doc-c/MPFR/: Installing-MPFR.html  MPFR-Interface.html  Reporting-Bugs.html  index.html
gmp-mpfr-sys/etc/: appveyor.yml  unpack.sh
gmp-mpfr-sys/gmp-6.3.0-c/: configure
gmp-mpfr-sys/mpfr-4.2.1-c/: ChangeLog  configure
gmp-mpfr-sys/mpfr-4.2.1-c/src/: Makefile.in
gmp-mpfr-sys/mpfr-4.2.1-c/tests/: Makefile.in
gmp-mpfr-sys/src/: gmp.rs  lib.rs  mpc.rs  mpfr.rs
patches/: gmp-mpfr-sys-android.patch
scripts/: configure_vms.py  fetch_results.py  login.py  login_compute.py  run.py  run_experiment.py  setup.sh  setup_deps.sh  setup_eval.py  ssh_utils.py  teardown.py
src/: lib.rs  network.rs  utils.rs
src/crypto/: mod.rs
src/crypto/avd/: error.rs  mod.rs  sparse_merkle_tree.rs
src/crypto/ibe/: error.rs  mod.rs
src/crypto/ibe/constraints/: hash_to_field.rs  map_to_curve.rs  mod.rs
src/crypto/nivss/: error.rs  mod.rs  pv_nivss.rs  sa_nivss.rs
src/crypto/proofs/: cl_koe.rs  dleq.rs  error.rs  mod.rs  msm.rs  pocs.rs  schnorr.rs  utils.rs
src/crypto/shamir/: mod.rs
src/crypto/sortition/: mod.rs
src/secret_recovery/: client.rs  common.rs  error.rs  mod.rs  server.rs
