[package]
name = "chorus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16", features = ["full"] }
vrf = "0.2.4"
openssl = { version = "0.10.63", features = ["vendored"] }
hex = "0.4.3"
tracing = "0.1"
blake2b-rs = "0.2"
class-group = { path = "./class_group/" }
rug = "1.26.1"
aes-gcm = "0.10.3"
generic-array = { version = "0.14", features = ["serde"] }
ark-std = { version = "0.4.0", default-features = true } # ark-std = { version = "0.4.0", features = ["print-trace"] }
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-poly = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", default-features = true, features = [ "r1cs", "crh" ]}
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-groth16 = { version = "^0.4.0", default-featuers = false }
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = { version = "0.10", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom", "std_rng"] }
rand_chacha = "0.3.1"
rayon = { version = "1.5.1", optional = true }
ark-bls12-377 = { version = "0.4.0", features = ["scalar_field"] }
ark-bw6-761 = { version = "0.4.0" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
block-padding = "0.3.3"
regex = "1"
indicatif = "0.16"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# serialize
serde_derive = "1.0.130"
bytes = { version = "^1.1.0", features = ["serde"] }

[dev-dependencies]
criterion = ">=0.2"
serde_json = "1.0"

[patch.crates-io]
gmp-mpfr-sys = { path = "./gmp-mpfr-sys/" } # a patch that allows for cross-compilation to Android

[features]
# default = ["std", "print-trace", "parallel", "deterministic", "client-parallel"]
default = ["std", "parallel", "deterministic", "client-parallel"]
std = ["ark-ff/std", "ark-r1cs-std/std", "ark-std/std", "rand/std", "ark-serialize/std", "ark-ec/std"]
print-trace  = ["ark-std/print-trace"]
parallel = ["rayon", "ark-std/parallel"]
deterministic = []
client-parallel = ["class-group/client-parallel"]

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[[bench]]
name = "pv_nivss"
path = "benches/pv_nivss.rs"
harness = false

[[bench]]
name = "sa_nivss"
path = "benches/sa_nivss.rs"
harness = false

[[bench]]
name = "secret_recovery"
path = "benches/secret_recovery.rs"
harness = false

[[bench]]
name = "serialization"
path = "benches/serialization.rs"
harness = false
