[package]
name = "class-group"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.26.1"
rand = "0.8.5"
gmp-mpfr-sys = "1.6.4"
rayon = { version = "1.5.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
cc = "1.0"
bindgen = { version = "0.68.1" }
cmake = { version = "0.1.50" }
gmp-mpfr-sys = "1.6.4"

[features]
default = []
client-parallel = ["rayon"]
client-parallel-bench = ["rayon"]

[dev-dependencies]
criterion = ">=0.2"

[[bench]]
name = "class-group"
path = "benches/bench.rs"
harness = false